--- a/ansible/roles/argocd/tasks/main.yml
+++ b/ansible/roles/argocd/tasks/main.yml
@@ -32,6 +32,7 @@
     label_selectors:
       - app.kubernetes.io/name=argocd-server
   register: argocd_pods
+  kubeconfig: "{{ kubeconfig }}"
 
 - name: Wait for argocd-server pod to be ready
   kubernetes.core.k8s_info:
@@ -41,6 +42,7 @@
     label_selectors:
       - app.kubernetes.io/name=argocd-server
   register: argocd_pods
+  kubeconfig: "{{ kubeconfig }}"
   until: >
     argocd_pods.resources is defined and
     argocd_pods.resources | length > 0 and
