--- a/bootstrap/root-application.yaml
+++ b/bootstrap/root-application.yaml
@@ -1,28 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
-kind: ApplicationSet
+kind: Application
 metadata:
-  name: infra-apps
+  name: root-application
   namespace: argocd
 spec:
-  generators:
-    - git:
-        repoURL: https://github.com/januschung/argocd
-        revision: HEAD
-        directories:
-          - path: clusters/k3s/infra/*
-  template:
-    metadata:
-      name: '{{path.basename}}'
-    spec:
-      project: default
-      source:
-        repoURL: https://github.com/januschung/argocd
-        targetRevision: HEAD
-        path: '{{path}}'
-      destination:
-        server: https://kubernetes.default.svc
-        namespace: '{{path.basename}}'
-      syncPolicy:
-        automated:
-          prune: true
-          selfHeal: true
+  project: default
+  source:
+    repoURL: https://github.com/januschung/argocd
+    targetRevision: HEAD
+    path: clusters/k3s/infra
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: argocd
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
