--- a/bootstrap/root-application.yaml
+++ b/bootstrap/root-application.yaml
@@ -5,12 +5,15 @@ metadata:
   namespace: argocd
 spec:
   project: default
-  source:
-    repoURL: https://github.com/januschung/argocd
-    targetRevision: HEAD
-    path: clusters/k3s/infra
-    directory:
-      recurse: true
+  sources:
+    - path: bootstrap
+      repoURL: https://github.com/januschung/argocd
+      targetRevision: HEAD
+    - path: clusters/k3s/infra
+      repoURL: https://github.com/januschung/argocd
+      targetRevision: HEAD
+      directory:
+        recurse: true
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
