--- a/clusters/k3s/infra/ingress-nginx/application.yaml
+++ b/clusters/k3s/infra/ingress-nginx/application.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://kubernetes.github.io/ingress-nginx
-    targetRevision: controller-v1.12.3
+    targetRevision: 4.12.3
     chart: ingress-nginx
     helm:
       valueFiles:
