--- a/clusters/k3s/infra/sealed-secrets/application.yaml
+++ b/clusters/k3s/infra/sealed-secrets/application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/bitnami-labs/sealed-secrets
+    repoURL: https://bitnami-labs.github.io/sealed-secrets
     targetRevision: v0.30.0
     chart: sealed-secrets
     helm:
