--- a/clusters/k3s/infra/sealed-secrets/application.yaml
+++ b/clusters/k3s/infra/sealed-secrets/application.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://bitnami-labs.github.io/sealed-secrets
-    targetRevision: v0.30.0
+    repoURL: https://charts.bitnami.com/bitnami
+    targetRevision: 2.5.15
     chart: sealed-secrets
     helm:
       valueFiles:
