--- a/clusters/k3s/infra/ingress-nginx/values.yaml
+++ b/clusters/k3s/infra/ingress-nginx/values.yaml
@@ -1,5 +1,8 @@
 controller:
   hostPort:
     enabled: true
+    ports:
+      http: 80
+      https: 443
   service:
-    enabled: false
+    type: ClusterIP
