--- a/clusters/k3s/infra/argocd/application.yaml
+++ b/clusters/k3s/infra/argocd/application.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://argoproj.github.io/argo-helm
     targetRevision: 8.1.2
-    path: charts/argo-cd
+    chart: argocd
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
