--- a/ansible/roles/argocd/tasks/main.yml
+++ b/ansible/roles/argocd/tasks/main.yml
@@ -1,55 +1,87 @@
+- name: Update DuckDNS IP
+  ansible.builtin.uri:
+    url: "https://www.duckdns.org/update?domains=janusc&token={{ duckdns_token }}&ip="
+    method: GET
+    return_content: true
+  register: duckdns_response
+
+- name: Show DuckDNS update response
+  ansible.builtin.debug:
+    var: duckdns_response.content
+
 - name: Set KUBECONFIG for Ansible to use
   ansible.builtin.set_fact:
     kubeconfig: /etc/rancher/k3s/k3s.yaml
 
-- name: Ensure argocd namespace exists
+- name: Add jetstack (cert-manager) Helm repo
+  kubernetes.core.helm_repository:
+    name: jetstack
+    repo_url: https://charts.jetstack.io
+
+- name: Add ArgoCD Helm repo
+  kubernetes.core.helm_repository:
+    name: argo
+    repo_url: https://argoproj.github.io/argo-helm
+
+- name: Install/Upgrade cert-manager via Helm
+  kubernetes.core.helm:
+    name: cert-manager
+    chart_ref: jetstack/cert-manager
+    release_namespace: cert-manager
+    create_namespace: true
+    kubeconfig: "{{ kubeconfig }}"
+    values:
+      installCRDs: true
+
+- name: Create cert-manager ClusterIssuer for Let's Encrypt
   kubernetes.core.k8s:
-    api_version: v1
-    kind: Namespace
-    name: argocd
     state: present
+    namespace: cert-manager
     kubeconfig: "{{ kubeconfig }}"
+    values:
+      apiVersion: cert-manager.io/v1
+      kind: ClusterIssuer
+      metadata:
+        name: letsencrypt-prod
+      spec:
+        acme:
+          server: https://acme-v02.api.letsencrypt.org/directory
+          email: "{{ acme_email }}"
+          privateKeySecretRef:
+            name: letsencrypt-prod
+          solvers:
+            - http01:
+                ingress:
+                  class: traefik
 
-- name: Apply ArgoCD manifests
-  shell: |
-    export PATH=/usr/local/bin:$PATH
-    kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
-  environment:
-    KUBECONFIG: "{{ kubeconfig }}"
-
-- name: Wait for ArgoCD server deployment ready
-  shell: |
-    export PATH=/usr/local/bin:$PATH
-    kubectl -n argocd rollout status deployment/argocd-server --timeout=120s
-  environment:
-    KUBECONFIG: "{{ kubeconfig }}"
-
-- name: Get Argo CD server pod
-  kubernetes.core.k8s_info:
-    api_version: v1
-    kind: Pod
-    namespace: argocd
-    label_selectors:
-      - app.kubernetes.io/name=argocd-server
+- name: Install/Upgrade ArgoCD via Helm
+  kubernetes.core.helm:
+    name: argocd
+    chart_ref: argo/argo-cd
+    release_namespace: argocd
+    create_namespace: true
     kubeconfig: "{{ kubeconfig }}"
-  register: argocd_pods
-  
-
-- name: Wait for argocd-server pod to be ready
-  kubernetes.core.k8s_info:
-    api_version: v1
-    kind: Pod
-    namespace: argocd
-    label_selectors:
-      - app.kubernetes.io/name=argocd-server
-    kubeconfig: "{{ kubeconfig }}"
-  register: argocd_pods
-  until: >
-    argocd_pods.resources is defined and
-    argocd_pods.resources | length > 0 and
-    argocd_pods.resources[0].status.phase == "Running"
-  retries: 10
-  delay: 15
+    values:
+      server:
+        ingress:
+          enabled: true
+          annotations:
+            kubernetes.io/ingress.class: traefik
+            traefik.ingress.kubernetes.io/router.entrypoints: websecure
+            traefik.ingress.kubernetes.io/router.tls: "true"
+          hosts:
+            - argocd.janusc.duckdns.org
+          paths:
+            - /
+          tls:
+            - hosts:
+                - argocd.janusc.duckdns.org
+      configs:
+        params:
+          server.insecure: false
+    wait: true
+    wait_timeout: 600
+    update_repo_cache: true
 
 - name: Copy Argo CD root bootstrap manifest to remote
   copy:
