install with helm

--- a/ansible/roles/argocd/tasks/main.yml
+++ b/ansible/roles/argocd/tasks/main.yml
@@ -13,6 +13,12 @@
   ansible.builtin.set_fact:
     kubeconfig: /etc/rancher/k3s/k3s.yaml
 
+- name: Install Helm
+  ansible.builtin.shell: |
+    curl -fsSL https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+  args:
+    creates: /usr/local/bin/helm
+
 - name: Add jetstack (cert-manager) Helm repo
   kubernetes.core.helm_repository:
     name: jetstack
@@ -95,3 +101,9 @@
     namespace: argocd
     src: /tmp/root-application.yaml               # remote path
     kubeconfig: "{{ kubeconfig }}"
+
+- name: Install Helm
+  ansible.builtin.shell: |
+    curl -fsSL https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+  args:
+    creates: /usr/local/bin/helm
