--- a/ansible/roles/argocd/tasks/main.yml
+++ b/ansible/roles/argocd/tasks/main.yml
@@ -65,9 +65,8 @@
 - name: Create cert-manager ClusterIssuer for Let's Encrypt
   kubernetes.core.k8s:
     state: present
-    namespace: cert-manager
     kubeconfig: "{{ kubeconfig }}"
-    values:
+    resource_definition:
       apiVersion: cert-manager.io/v1
       kind: ClusterIssuer
       metadata:
