--- a/ansible/roles/argocd/tasks/main.yml
+++ b/ansible/roles/argocd/tasks/main.yml
@@ -108,7 +108,7 @@
         params:
           server.insecure: false
     wait: true
-    wait_timeout: 600
+    wait_timeout: 600s
     update_repo_cache: true
 
 - name: Copy Argo CD root bootstrap manifest to remote
