--- a/ansible/roles/argocd/tasks/main.yml
+++ b/ansible/roles/argocd/tasks/main.yml
@@ -93,10 +93,7 @@
       server:
         ingress:
           enabled: true
-          annotations:
-            kubernetes.io/ingress.class: traefik
-            traefik.ingress.kubernetes.io/router.entrypoints: websecure
-            traefik.ingress.kubernetes.io/router.tls: "true"
+          ingressClassName: traefik
           hosts:
             - argocd.janusc.duckdns.org
           paths:
