--- a/clusters/k3s/infra/argocd/application.yaml
+++ b/clusters/k3s/infra/argocd/application.yaml
@@ -9,7 +9,7 @@ spec:
     repoURL: https://github.com/januschung/argocd
     targetRevision: HEAD
     path: clusters/k3s/infra/argocd
-    hellm:
+    helm:
       valueFiles:
         - values.yaml
   destination:
