--- a/clusters/k3s/infra/argocd/values.yaml
+++ b/clusters/k3s/infra/argocd/values.yaml
@@ -1,10 +1,7 @@
 server:
   ingress:
     enabled: true
-    annotations:
-      kubernetes.io/ingress.class: traefik
-      traefik.ingress.kubernetes.io/router.entrypoints: websecure
-      traefik.ingress.kubernetes.io/router.tls: "true"
+    ingressClassName: traefik
     hosts:
       - argocd.janusc.duckdns.org
     paths:
