--- a/ansible/roles/argocd/tasks/main.yml
+++ b/ansible/roles/argocd/tasks/main.yml
@@ -1,14 +1,3 @@
-- name: Update DuckDNS IP
-  ansible.builtin.uri:
-    url: "https://www.duckdns.org/update?domains=janusc&token={{ duckdns_token }}&ip="
-    method: GET
-    return_content: true
-  register: duckdns_response
-
-- name: Show DuckDNS update response
-  ansible.builtin.debug:
-    var: duckdns_response.content
-
 - name: Set KUBECONFIG for Ansible to use
   ansible.builtin.set_fact:
     kubeconfig: /etc/rancher/k3s/k3s.yaml
@@ -42,45 +31,10 @@
         mode: '0755'
         state: file
 
-- name: Add jetstack (cert-manager) Helm repo
-  kubernetes.core.helm_repository:
-    name: jetstack
-    repo_url: https://charts.jetstack.io
-
 - name: Add ArgoCD Helm repo
   kubernetes.core.helm_repository:
     name: argo
     repo_url: https://argoproj.github.io/argo-helm
-
-- name: Install/Upgrade cert-manager via Helm
-  kubernetes.core.helm:
-    name: cert-manager
-    chart_ref: jetstack/cert-manager
-    release_namespace: cert-manager
-    create_namespace: true
-    kubeconfig: "{{ kubeconfig }}"
-    values:
-      installCRDs: true
-
-- name: Create cert-manager ClusterIssuer for Let's Encrypt
-  kubernetes.core.k8s:
-    state: present
-    kubeconfig: "{{ kubeconfig }}"
-    resource_definition:
-      apiVersion: cert-manager.io/v1
-      kind: ClusterIssuer
-      metadata:
-        name: letsencrypt-prod
-      spec:
-        acme:
-          server: https://acme-v02.api.letsencrypt.org/directory
-          email: "{{ acme_email }}"
-          privateKeySecretRef:
-            name: letsencrypt-prod
-          solvers:
-            - http01:
-                ingress:
-                  class: traefik
 
 - name: Install/Upgrade ArgoCD via Helm
   kubernetes.core.helm:
@@ -91,17 +45,21 @@
     kubeconfig: "{{ kubeconfig }}"
     values:
       server:
+        extraArgs:
+          - --rootpath=/argocd
         ingress:
           enabled: true
           ingressClassName: traefik
           hosts:
-            - argocd.janusc.duckdns.org
+            - janusc.duckdns.org
           paths:
-            - /
-          tls:
-            - hosts:
-                - argocd.janusc.duckdns.org
+            - /argocd
+          annotations:
+            traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
+            traefik.ingress.kubernetes.io/router.tls.certresolver: le
       configs:
+        cm:
+          url: https://janusc.duckdns.org/argocd
         params:
           server.insecure: false
     wait: true
