--- a/clusters/k3s/infra/argocd/values.yaml
+++ b/clusters/k3s/infra/argocd/values.yaml
@@ -1,18 +1,27 @@
+nameOverride: argocd
+global:
+  domain: janusc.duckdns.org
+
+crds:
+  install: true
+
+configs:
+  params:
+    server.rootpath: /argocd
+    server.basehref: /argocd/
+
 server:
-  extraArgs:
-    - --rootpath=/argocd
   ingress:
     enabled: true
+    controller: generic
     ingressClassName: traefik
-    hosts:
-      - janusc.duckdns.org
-    paths:
-      - /argocd
     annotations:
       traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
       traefik.ingress.kubernetes.io/router.tls.certresolver: le
-configs:
-  cm:
-    url: https://janusc.duckdns.org/argocd
-  params:
-    server.insecure: false
+    hostname: janusc.duckdns.org
+    path: /argocd
+    pathType: Prefix
+    tls: true
+    extraTls:
+      - hosts:
+          - janusc.duckdns.org
