--- a/clusters/k3s/infra/argocd/values.yaml
+++ b/clusters/k3s/infra/argocd/values.yaml
@@ -1,21 +1,25 @@
-nameOverride: argocd
-fullnameOverride: argocd
+argo-cd:
+  nameOverride: argocd
+  fullnameOverride: argocd
 
-configs:
-  params:
-    server.insecure: true
-    server.rootpath: /argocd
-    server.basehref: /argocd/
+  configs:
+    params:
+      server.insecure: true
+      server.rootpath: /argocd
+      server.basehref: /argocd/
 
-server:
-  extraArgs: ["--insecure", "--rootpath=/argocd", "--basehref=/argocd"]
-  ingress:
-    enabled: true
-    ingressClassName: traefik
-    hostname: janusc.duckdns.org
-    path: /argocd
-    pathType: Prefix
-    annotations:
-      traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
-      traefik.ingress.kubernetes.io/router.tls.certresolver: le
-    tls: true
+  server:
+    extraArgs:
+      - --insecure
+      - --rootpath=/argocd
+      - --basehref=/argocd/
+    ingress:
+      enabled: true
+      ingressClassName: traefik
+      hostname: janusc.duckdns.org
+      path: /argocd
+      pathType: Prefix
+      annotations:
+        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
+        traefik.ingress.kubernetes.io/router.tls.certresolver: le
+      tls: true
