set up dex with github

--- a/.github/workflows/create-sealed-secret.yml
+++ b/.github/workflows/create-sealed-secret.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Fetch Sealed Secrets public cert via kubectl
         run: |
-          ssh ${{ inputs.ssh_user }}@$${{ inputs.host }} \
+          ssh ${{ inputs.ssh_user }}@${{ inputs.host }} \
             "kubectl get secret -n kube-system sealed-secrets-key -o jsonpath='{.data.tls\.crt}'" \
             | base64 -d > cert.pem
 
