set up dex with github

--- a/.github/workflows/create-sealed-secret.yml
+++ b/.github/workflows/create-sealed-secret.yml
@@ -50,8 +50,8 @@ jobs:
 
       - name: Fetch Sealed Secrets public cert via kubectl
         run: |
-          ssh ${{ inputs.ssh_user }}@${{ inputs.host }} \
-            "kubectl get secret -n kube-system sealed-secrets-key -o jsonpath='{.data.tls\.crt}'" \
+          ssh "${{ inputs.ssh_user }}@${{ inputs.host }}" \
+            'kubectl get secret -n kube-system sealed-secrets-key -o jsonpath="{.data.tls\\.crt}"' \
             | base64 -d > cert.pem
 
       - name: Write JSON input to file
@@ -64,14 +64,14 @@ jobs:
           NAMESPACE="${{ inputs.namespace }}"
 
           cat <<EOF > secret.yaml
-apiVersion: v1
-kind: Secret
-metadata:
-  name: $SECRET_NAME
-  namespace: $NAMESPACE
-type: Opaque
-data:
-EOF
+          apiVersion: v1
+          kind: Secret
+          metadata:
+            name: $SECRET_NAME
+            namespace: $NAMESPACE
+          type: Opaque
+          data:
+          EOF
 
           for key in $(jq -r 'keys[]' kv.json); do
             value=$(jq -r --arg k "$key" '.[$k]' kv.json | base64 -w0)
