set up dex with github

--- a/clusters/k3s/infra/argocd/values.yaml
+++ b/clusters/k3s/infra/argocd/values.yaml
@@ -17,7 +17,7 @@ argo-cd:
               name: GitHub
               config:
                 clientID: Ov23liIrQ2JLk0Bwvl5O
-                clientSecret: $dex.github.clientSecret
+                clientSecret: $dex-github-secret
                 redirectURI: https://janusc.duckdns.org/argocd/api/dex/callback
 
       kustomize.buildOptions: --enable-helm
