set up dex with github

--- a/.github/workflows/create-sealed-secret.yml
+++ b/.github/workflows/create-sealed-secret.yml
@@ -39,6 +39,7 @@ jobs:
         run: |
           sudo apt-get update && sudo apt-get install -y jq openssh-client
           curl -L -o /usr/local/bin/kubeseal https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.24.5/kubeseal-linux-amd64
+          sudo mv kubeseal-linux-amd64/kubeseal /usr/local/bin/kubeseal
           chmod +x /usr/local/bin/kubeseal
 
       - name: Setup SSH access
