set up dex with github

--- a/.github/workflows/create-sealed-secret.yml
+++ b/.github/workflows/create-sealed-secret.yml
@@ -38,9 +38,10 @@ jobs:
       - name: Install tools
         run: |
           sudo apt-get update && sudo apt-get install -y jq openssh-client
-          curl -L -o /usr/local/bin/kubeseal https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.24.5/kubeseal-linux-amd64
-          sudo mv kubeseal-linux-amd64/kubeseal /usr/local/bin/kubeseal
-          chmod +x /usr/local/bin/kubeseal
+          curl -sSL https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.24.5/kubeseal-0.24.5-linux-amd64.tar.gz \
+          | tar -xz --strip-components=1 kubeseal-0.24.5-linux-amd64/kubeseal && sudo mv kubeseal /usr/local/bin/
+          sudo mv kubeseal /usr/local/bin/
+          sudo chmod +x /usr/local/bin/kubeseal
 
       - name: Setup SSH access
         run: |
