set up dex with github

--- a/.github/workflows/create-sealed-secret.yml
+++ b/.github/workflows/create-sealed-secret.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           sudo apt-get update && sudo apt-get install -y jq openssh-client
           curl -sSL https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.24.5/kubeseal-0.24.5-linux-amd64.tar.gz \
-          | tar -xz kubeseal
+            | tar -xz
           sudo mv kubeseal /usr/local/bin/
           sudo chmod +x /usr/local/bin/kubeseal
 
