set up dex with github

--- a/.github/workflows/create-sealed-secret.yml
+++ b/.github/workflows/create-sealed-secret.yml
@@ -50,11 +50,14 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H "${{ inputs.host }}" >> ~/.ssh/known_hosts
 
-      - name: Fetch Sealed Secrets public cert via kubectl
+      - name: Fetch Sealed Secrets cert in PEM format
         run: |
           ssh "${{ inputs.ssh_user }}@${{ inputs.host }}" \
-            'kubectl get secret -n kube-system sealed-secrets-key -o jsonpath="{.data.tls\\.crt}"' \
-            | base64 -d > cert.pem
+            "kubectl get secret sealed-secrets-key -n kube-system -o jsonpath='{.data.tls\\.crt}'" \
+            | base64 -d > tls.crt
+
+          # Convert to PEM if necessary
+          openssl x509 -in tls.crt -inform DER -out cert.pem -outform PEM
 
       - name: Write JSON input to file
         run: |
