set up dex with github

--- a/.github/workflows/create-sealed-secret.yml
+++ b/.github/workflows/create-sealed-secret.yml
@@ -50,13 +50,13 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H "${{ inputs.host }}" >> ~/.ssh/known_hosts
 
-      - name: Fetch Sealed Secrets cert in PEM format
+      - name: Fetch Sealed Secrets cert (by label, auto-convert to PEM)
         run: |
-          ssh "${{ inputs.ssh_user }}@${{ inputs.host }}" \
-            "kubectl get secret sealed-secrets-key -n kube-system -o jsonpath='{.data.tls\\.crt}'" \
-            | base64 -d > tls.crt
+          ssh "${{ inputs.ssh_user }}@${{ inputs.host }}" '
+            kubectl get secret -n kube-system -l sealedsecrets.bitnami.com/sealed-secrets-key=active \
+              -o jsonpath="{.items[0].data.tls\\.crt}"' \
+          | base64 -d > tls.crt
 
-          # Convert to PEM if necessary
           openssl x509 -in tls.crt -inform DER -out cert.pem -outform PEM
 
       - name: Write JSON input to file
