--- a/.github/workflows/create-sealed-secret.yml
+++ b/.github/workflows/create-sealed-secret.yml
@@ -53,10 +53,9 @@ jobs:
       - name: Fetch Sealed Secrets cert (by label, robust)
         run: |
           ssh "${{ inputs.ssh_user }}@${{ inputs.host }}" \
-            "kubectl get secret -n kube-system -l sealedsecrets.bitnami.com/sealed-secrets-key=active -o json" \
-            | jq -r '.items[0].data["tls.crt"]' | base64 -d > tls.crt
-
-          openssl x509 -in tls.crt -inform DER -out cert.pem -outform PEM
+            "kubectl get secret -n kube-system -l sealedsecrets.bitnami.com/sealed-secrets-key=active \
+            -o jsonpath='{.items[0].data.tls\\.crt}'" \
+            | base64 -d > cert.pem
 
       - name: Write JSON input to file
         run: |
