set up dex with github

--- a/.github/workflows/create-sealed-secret.yml
+++ b/.github/workflows/create-sealed-secret.yml
@@ -1,4 +1,8 @@
-name: Create Sealed Secret (inline JSON via SSH)
+name: Create Sealed Secret
+
+permissions:
+  contents: write
+  pull-requests: write
 
 on:
   workflow_dispatch:
@@ -50,7 +54,7 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H "${{ inputs.host }}" >> ~/.ssh/known_hosts
 
-      - name: Fetch Sealed Secrets cert (by label, robust)
+      - name: Fetch Sealed Secrets cert
         run: |
           ssh "${{ inputs.ssh_user }}@${{ inputs.host }}" \
             "kubectl get secret -n kube-system -l sealedsecrets.bitnami.com/sealed-secrets-key=active \
