--- a/.github/workflows/create-sealed-secret.yml
+++ b/.github/workflows/create-sealed-secret.yml
@@ -95,7 +95,8 @@ jobs:
           mkdir -p $(dirname "${{ inputs.sealed_path }}")
           mv sealed-secret.yaml "${{ inputs.sealed_path }}"
 
-      - name: Create and auto-merge PR
+      - name: Create PR for sealed secret
+        id: cpr
         uses: peter-evans/create-pull-request@v5
         with:
           commit-message: "Add sealed secret: ${{ inputs.secret_name }}"
@@ -106,5 +107,11 @@ jobs:
           base: main
           labels: auto-merge
           delete-branch: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Enable auto-merge
+        uses: peter-evans/enable-pull-request-automerge@v2
+        with:
+          pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
           merge-method: squash
           token: ${{ secrets.GITHUB_TOKEN }}
