--- a/.github/workflows/create-sealed-secret.yml
+++ b/.github/workflows/create-sealed-secret.yml
@@ -105,8 +105,8 @@ jobs:
             This PR adds a sealed secret for `${{ inputs.secret_name }}` in namespace `${{ inputs.namespace }}`.
           branch: "sealed-secret/${{ inputs.secret_name }}"
           base: main
-          labels: auto-merge
           delete-branch: true
+          path: ${{ inputs.sealed_path }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Enable auto-merge
