--- a/.github/workflows/create-sealed-secret.yml
+++ b/.github/workflows/create-sealed-secret.yml
@@ -93,7 +93,7 @@ jobs:
       - name: Move sealed secret to path
         run: |
           mkdir -p $(dirname "${{ inputs.sealed_path }}")
-          mv sealed-secret.yaml "${{ inputs.sealed_path }}"
+          mv sealed-secret.yaml "${{ inputs.sealed_path }}"/"${{ inputs.secret_name }}".sealed-secret.yaml
 
       - name: Create PR for sealed secret
         id: cpr
