--- a/.github/workflows/create-sealed-secret.yml
+++ b/.github/workflows/create-sealed-secret.yml
@@ -106,7 +106,7 @@ jobs:
           branch: "sealed-secret/${{ inputs.secret_name }}"
           base: main
           delete-branch: true
-          path: ./${{ inputs.sealed_path }}
+          path: ../${{ inputs.sealed_path }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Enable auto-merge
