--- a/.github/workflows/create-sealed-secret.yml
+++ b/.github/workflows/create-sealed-secret.yml
@@ -97,17 +97,18 @@ jobs:
 
       - name: Create PR for sealed secret
         id: cpr
-        uses: peter-evans/create-pull-request@v5
+        uses: peter-evans/create-pull-request@v6
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "Add sealed secret: ${{ inputs.secret_name }}"
+          committer: "GitHub Actions <actions@bogus.com>"
+          author: "Autobot <autobot@bogus.com>"
           title: "Add sealed secret `${{ inputs.secret_name }}`"
           body: |
             This PR adds a sealed secret for `${{ inputs.secret_name }}` in namespace `${{ inputs.namespace }}`.
           branch: "sealed-secret/${{ inputs.secret_name }}"
           base: main
           delete-branch: true
-          path: ../${{ inputs.sealed_path }}
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Enable auto-merge
         uses: peter-evans/enable-pull-request-automerge@v2
