--- a/.github/workflows/create-sealed-secret.yml
+++ b/.github/workflows/create-sealed-secret.yml
@@ -45,6 +45,7 @@ jobs:
           curl -sSL https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.24.5/kubeseal-0.24.5-linux-amd64.tar.gz \
             | tar -xz
           sudo mv kubeseal /usr/local/bin/
+          rm README.md LICENSE
           sudo chmod +x /usr/local/bin/kubeseal
 
       - name: Setup SSH access
@@ -111,8 +112,12 @@ jobs:
           delete-branch: true
 
       - name: Enable auto-merge
-        uses: peter-evans/enable-pull-request-automerge@v2
-        with:
-          pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
-          merge-method: squash
-          token: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          for i in {1..5}; do
+            echo "Attempt $i: Trying to enable auto-merge..."
+            gh pr merge --merge --auto "sealed-secret/${{ inputs.secret_name }}" && break
+            echo "Auto-merge failed. Retrying in 10 seconds..."
+            sleep 10
+          done
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
