--- a/clusters/k3s/infra/argocd/values.yaml
+++ b/clusters/k3s/infra/argocd/values.yaml
@@ -9,6 +9,7 @@ argo-cd:
       server.basehref: /argocd/
 
     cm:
+      url: https://janusc.duckdns.org/argocd
       dex.config: |
         connectors:
           - type: github
