--- a/clusters/k3s/infra/argocd/values.yaml
+++ b/clusters/k3s/infra/argocd/values.yaml
@@ -12,13 +12,19 @@ argo-cd:
       url: https://janusc.duckdns.org/argocd
       dex.config: |
         connectors:
-          - type: github
-            id: github
-            name: GitHub
-            config:
-              clientID: Ov23liIrQ2JLk0Bwvl5O
-              clientSecret: $dex-github-secret
-              redirectURI: https://janusc.duckdns.org/argocd/api/dex/callback
+        - type: github
+          id: github
+          name: GitHub
+          config:
+            clientID: <your-client-id>
+            clientSecret: <your-secret>
+            redirectURI: https://janusc.duckdns.org/argocd/api/dex/callback
+      staticClients: []
+      enablePasswordDB: false
+      oidc:
+        skipApprovalScreen: true
+        usernameClaim: login
+        emailClaim: email
 
       kustomize.buildOptions: --enable-helm
       resource.customizations: |
