--- a/clusters/k3s/infra/argocd/values.yaml
+++ b/clusters/k3s/infra/argocd/values.yaml
@@ -21,10 +21,14 @@ argo-cd:
             redirectURI: https://janusc.duckdns.org/argocd/api/dex/callback
         staticClients: []
         enablePasswordDB: false
-        oidc:
-          skipApprovalScreen: true
-          usernameClaim: login
-          emailClaim: email
+      oidc.config: |
+        name: GitHub
+        issuer: https://janusc.duckdns.org/argocd/api/dex
+        clientID: argo-cd
+        clientSecret: $dex-github-secret
+        requestedScopes: ["openid", "email", "profile"]
+        emailClaim: email
+        usernameClaim: login
 
       kustomize.buildOptions: --enable-helm
       resource.customizations: |
@@ -36,10 +40,9 @@ argo-cd:
             }
     rbac:
       policy.csv: |
-        g, github:januschung, role:admin
+        g, januschung, role:admin
       policy.default: role:readonly
-      policy.matchMode: glob
-      scopes: '[groups, email]'
+      scopes: '[login]'
 
   server:
     extraArgs:
