--- a/.github/workflows/create-sealed-secret.yml
+++ b/.github/workflows/create-sealed-secret.yml
@@ -14,6 +14,10 @@ on:
       secret_name:
         description: "Kubernetes Secret name"
         required: true
+      add_label:
+        description: "Add Argo CD label to Secret"
+        required: false
+        default: "false"
       namespace:
         description: "Kubernetes namespace"
         required: true
@@ -70,16 +74,21 @@ jobs:
         run: |
           SECRET_NAME="${{ inputs.secret_name }}"
           NAMESPACE="${{ inputs.namespace }}"
+          ADD_LABEL="${{ inputs.add_label }}"
 
-          cat <<EOF > secret.yaml
-          apiVersion: v1
-          kind: Secret
-          metadata:
-            name: $SECRET_NAME
-            namespace: $NAMESPACE
-          type: Opaque
-          data:
-          EOF
+          echo "apiVersion: v1" > secret.yaml
+          echo "kind: Secret" >> secret.yaml
+          echo "metadata:" >> secret.yaml
+          echo "  name: $SECRET_NAME" >> secret.yaml
+          echo "  namespace: $NAMESPACE" >> secret.yaml
+
+          if [[ "$ADD_LABEL" == "true" ]]; then
+            echo "  labels:" >> secret.yaml
+            echo "    app.kubernetes.io/part-of: argocd" >> secret.yaml
+          fi
+
+          echo "type: Opaque" >> secret.yaml
+          echo "data:" >> secret.yaml
 
           for key in $(jq -r 'keys[]' kv.json); do
             value=$(jq -r --arg k "$key" '.[$k]' kv.json | base64 -w0)
