--- a/bootstrap/root-application.yaml
+++ b/bootstrap/root-application.yaml
@@ -14,7 +14,7 @@ spec:
       targetRevision: HEAD
       directory:
         recurse: true
-        include: "{application.yaml,application-set.yaml}"
+        include: .*application.*\.ya?ml$
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
