--- a/bootstrap/root-application.yaml
+++ b/bootstrap/root-application.yaml
@@ -14,7 +14,7 @@ spec:
       targetRevision: HEAD
       directory:
         recurse: true
-        include: .*application.*\.ya?ml$
+        exclude: '{templates/*}'
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
