--- a/bootstrap/root-application.yaml
+++ b/bootstrap/root-application.yaml
@@ -9,12 +9,12 @@ spec:
     - path: bootstrap
       repoURL: https://github.com/januschung/argocd
       targetRevision: HEAD
-    - path: clusters/k3s/infra
+    - path: infra/argocd
       repoURL: https://github.com/januschung/argocd
       targetRevision: HEAD
-      directory:
-        recurse: true
-        exclude: '{templates/*}'
+    - path: infra/sealed-secrets
+      repoURL: https://github.com/januschung/argocd
+      targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
