--- a/bootstrap/root-application.yaml
+++ b/bootstrap/root-application.yaml
@@ -14,6 +14,7 @@ spec:
       targetRevision: HEAD
       directory:
         recurse: true
+        include: "{*application.yaml,*application-set.yaml}"
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
