--- a/lab/photo-show/chart/templates/deploy.yaml
+++ b/lab/photo-show/chart/templates/deploy.yaml
@@ -23,6 +23,7 @@ spec:
         {{- range .Values.imagePullSecrets }}
         - name: {{ .name }}
         {{- end }}
+      revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
       containers:
         - name: {{ include "app.name" . }}
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
