update dex.config scopes too

--- a/infra/argocd/values.yaml
+++ b/infra/argocd/values.yaml
@@ -35,7 +35,7 @@ argo-cd:
             }
     rbac:
       policy.csv: |
-        g, januschung, role:admin
+        g, januschung@gmail.com, role:admin
       policy.default: role:readonly
       scopes: '[openid, profile, email]'
 
