--- a/infra/argocd/values.yaml
+++ b/infra/argocd/values.yaml
@@ -38,7 +38,7 @@ argo-cd:
       policy.csv: |
         g, januschung, role:admin
       policy.default: role:readonly
-      scopes: '[openid, profile, email]'
+      scopes: '[profile, email]'
 
   server:
     extraArgs:
