--- a/lab/observation-bay/chart/templates/cluster-role-binding.yaml
+++ b/lab/observation-bay/chart/templates/cluster-role-binding.yaml
@@ -5,7 +5,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: {{ include "app.name" . }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
   name: {{ include "app.name" . }}
