--- a/lab/observation-bay/chart/templates/service-account.yaml
+++ b/lab/observation-bay/chart/templates/service-account.yaml
@@ -2,4 +2,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "app.name" . }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
