--- a/lab/job-winner/chart/templates/backend-configmap.yaml
+++ b/lab/job-winner/chart/templates/backend-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: name: {{ include "app.name" . }}-backend
+  name: {{ include "app.name" . }}-backend
 data:
   SPRING_PROFILES_ACTIVE: demo
   UI_PATH: https://{{ .Values.ingress.hostname }}/jobwinner
