--- a/lab/job-winner/chart/templates/frontend-configmap.yaml
+++ b/lab/job-winner/chart/templates/frontend-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: name: {{ include "app.name" . }}-frontend
+  name: {{ include "app.name" . }}-frontend
 data:
   BACKEND_URL: /graphql
   
